# embedded_task

./: .gitignore  README.md
c_implementation/: CMakeLists.txt  README.md
c_implementation/demo/: main_pc_demo.c
c_implementation/firmware/: isr_vectors.c  system_init.c  system_init.h
c_implementation/firmware/startup/: README.md  linker_script.ld  startup_gcc.c
c_implementation/include/app/: app_temp_monitor.h
c_implementation/include/driver/: adc_driver.h  eeprom_driver.h  gpio_driver.h  i2c_driver.h  timer_driver.h
c_implementation/include/platform/: mcu_registers.h  mock_environment.h  platform_hooks.h
c_implementation/include/service/: device_config_service.h  led_indicator_service.h  temperature_service.h
c_implementation/src/app/: app_temp_monitor.c
c_implementation/src/driver/: adc_driver.c  eeprom_driver.c  gpio_driver.c  i2c_driver.c  timer_driver.c
c_implementation/src/platform_sim/: mock_registers.c  platform_hooks_sim.c
c_implementation/src/service/: device_config_service.c  led_indicator_service.c  temperature_service.c
cpp_implementation/: CMakeLists.txt  README.md
cpp_implementation/demo/: main_pc_demo.cpp
cpp_implementation/firmware/: isr_vectors.cpp  system_init.cpp  system_init.hpp
cpp_implementation/firmware/startup/: README.md  linker_script.ld  startup_gcc.cpp
cpp_implementation/include/app/: TemperatureMonitorApplication.hpp
cpp_implementation/include/driver/: Eeprom24LC.hpp  IAnalogInput.hpp  IDigitalOutput.hpp  II2cBus.hpp  INonVolatileStorage.hpp  ITimer.hpp  McuAdcChannel.hpp  McuGpioOutput.hpp  McuI2cBus.hpp  McuTimer.hpp
cpp_implementation/include/platform/: mcu_registers.hpp  mock_environment.hpp  platform_hooks.hpp
cpp_implementation/include/service/: DeviceConfig.hpp  DeviceConfigManager.hpp  ITemperatureScaler.hpp  LedIndicator.hpp  TemperatureMonitor.hpp  TemperatureScalerFactory.hpp  TemperatureScalers.hpp
cpp_implementation/src/app/: TemperatureMonitorApplication.cpp
cpp_implementation/src/driver/: Eeprom24LC.cpp  McuAdcChannel.cpp  McuGpioOutput.cpp  McuI2cBus.cpp  McuTimer.cpp
cpp_implementation/src/platform_sim/: mock_registers.cpp  platform_hooks_sim.cpp
cpp_implementation/src/service/: DeviceConfigManager.cpp  LedIndicator.cpp  TemperatureMonitor.cpp  TemperatureScalerFactory.cpp  TemperatureScalers.cpp
docs/architecture/: architecture.md
